--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,9 +2,18 @@
 <html>
   <head>
     <title>Meadowlark Travel</title>
+    {{!-- {{{_sections.head}}} --}}
   </head>
   <body>
-    <header><img src="/img/logo.jpg" alt="Meadowlark Travel Logo"></header>
     {{{body}}}
+    {{#if flash}}
+      <div class="alert alert-dismissible alert-{{flash.type}}">
+				<button type="button" class="close" 
+					data-dismiss="alert" aria-hidden="true">&times;</button>
+				<strong>{{flash.intro}}</strong> {{{flash.message}}}
+			</div>
+    {{/if}}
+    {{!-- <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
+    {{{_sections.jquery}}} --}}
   </body>
 </html>
